updated config, added last update in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,8 @@
       </div>
 
       <div class="footer-col footer-col-2">
-        {%- include social.html -%}
+        <p>Last updated:</p>
+        {{ site.time }}
       </div>
 
       <div class="footer-col footer-col-3">
