--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,8 +22,7 @@
       </div>
 
       <div class="footer-col footer-col-2">
-        <p>Last updated:</p>
-        {{ site.time }}
+        <p>Last updated:<br/>{{ site.time }}</p>
       </div>
 
       <div class="footer-col footer-col-3">
